# How_Wrong

./: CLAIMS.md  HYPOTHESES.md  README.md  REPRODUCING.md  plan.md  pyproject.toml
data/derived/: criteo_dev_1m.parquet.sha256
notebooks/: 00_review_walkthrough.ipynb  01_rct_foundations.ipynb  02_cate_estimators.ipynb  03_policy.ipynb  04_how_wrong.ipynb
report/: SUMMARY_FOR_REVIEW.md  interview_qa.md  report.md  resume_bullets.md
results/: MANIFEST.sha256
results/stage1/: arm_summary_full.csv  balance_criteo_full.csv  subsample_cert.json
results/stage2/: clan_dr_visit.csv  gates_deciles.csv  h1_blp.json  metrics.json
results/stage3/: bias_grid.csv  summary.json
results/stage4/: curves_conversion.csv  curves_visit.csv  policy_results.json  roi.csv
results/stage5/: finals.json
scripts/: 01_make_dev_subsample.py  02_fit_cate.py  03_how_wrong.py  04_policy.py  05_full_finals.py
src/how_wrong/: __init__.py  ate.py  balance.py  confound.py  data.py  evaluate.py  folds.py  learners.py  policy.py  reproduce.py
tests/: test_gate_stage0.py  test_gate_stage1.py  test_gate_stage2.py  test_gate_stage3.py  test_gate_stage4.py  test_gate_stage5.py
