[project]
name = "how-wrong"
version = "0.1.0"
description = "How Wrong Without the Experiment? Causal ML on the Criteo 13.98M-user uplift RCT"
requires-python = ">=3.13"
dependencies = [
    "causalml>=0.17.0",
    "econml>=0.16",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.0,<2.4",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "scikit-learn>=1.0,<1.7",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/how_wrong"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gate_stage0: Stage 0 gate — environment, data presence, schema/row-count contracts",
    "gate_stage1: Stage 1 gate — balance, subsample representativeness, fold discipline",
    "gate_stage2: Stage 2 gate — synthetic CATE recovery, learner contracts",
    "gate_stage3: Stage 3 gate — confounding protocol, headline numbers",
    "gate_stage4: Stage 4 gate — policy evaluation, H2 adjudication",
    "gate_stage5: Stage 5 gate — fresh-machine reproduction",
    "slow: reads/decompresses the full 311 MB raw file (~1 min)",
]
